# spotify-qr-scanner

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  all_vinyl_positions.json  export-requirements.ps1  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
api/: generate_qr_codes.py  github.py  index.py  qr_helper_functions.py  spotify.py
app/: layout.tsx  page.tsx
app/admin/: page.tsx
app/all-qr/: page.tsx
app/play-vinyl/[position]/: page.tsx
components/: QrCodeGrid.tsx
local/: generate_qr_codes.py
