[tool.poetry]
name = "spotify-qr-scanner"
version = "0.1.0"
description = ""
authors = ["Bas <57452503+basekkelenkamp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "0.100.1"
uvicorn = {version = "0.23.2", extras = ["standard"]}
pre-commit = "^3.7.1"
requests = "^2.32.3"
spotipy = "^2.24.0"
segno = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
